# Persian-Calendar

./: AUTHORS  ChangeLog  Makefile  Makefile.am  README  README.md  autogen.sh  calendar.c  calendar.glade  configure.ac
data/: Makefile.am  acal.desktop.in  ir.ubuntu.acal.gschema.xml
pixmaps/: README
po/: LINGUAS  Makevars  POTFILES.in  fa.po
src/: Makefile.am  acal.c  acal.gresource.xml
src/resources/: calendar.glade
